# voice_assistant_aircraft_maintenance

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  start.sh  test_data.sql
.github/workflows/: mypy_lint_form_check.yml
.migrations/: env.py
.migrations/versions/: 230ffe63172f_0007.py  b317d101703f_0003.py  b42d6ff2eb4a_0001.py  e40b11aec317_0004.py  e83bf70c1e69_0002.py  eaea4cbf4f15_0005.py  eb0f5a825f77_0006.py  f0ac01bdff83_0001.py  f79333f4debf_0001.py
app/: main.py
app/api/exception_responses/: exceptions.py  responses.py
app/api/v1/controllers/: auth_controller.py  maintenance_controller.py  report_controller.py  session_controllers.py  user_controllers.py  voice_controller.py
app/core/: custom_exceptions.py
app/core/configs/: database.py  settings.py
app/core/utils/: logger.py
app/dependencies/: container.py
app/dependencies/providers/: __init__.py  con_providers.py  repo_providers.py  service_provider.py
app/middleware/: check_jwt_middleware.py  logging_middleware.py
app/repositories/: __init__.py  auth_repo.py  common_repo.py  maintenance_repo.py  report_repo.py  session_repo.py  user_repo.py
app/services/: __init__.py  auth_service.py  common_service.py  file_service.py  jwt_service.py  maintenance_service.py  recognition_service.py  report_service.py  session_service.py  synthesize_service.py  user_services.py
media/: time_diagram.drawio
tests/: __init__.py  conftest.py
tests/integrations/user_controllers/: test_get_user.py
(+35 files in other folders)
